# stream-zero

./: README.md
bindings/mock-stablecoin/: .gitignore  README.md  package-lock.json  package.json
bindings/mock-stablecoin/src/: index.ts
bindings/streamzero/: README.md  package-lock.json  package.json
bindings/streamzero/src/: index.ts
deployments/: testnet.json
docs/: prd.md
frontend/: README.md  next.config.mjs  package-lock.json  package.json  postcss.config.mjs  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/employee/: page.tsx
frontend/src/app/employer/: page.tsx
frontend/src/components/: EmployeeDashboard.tsx  EmployerDashboard.tsx  RoleTabs.tsx  SecretLinkRedirect.tsx  SiteFooter.tsx  SiteHeader.tsx  WalletProvider.tsx  icons.tsx
frontend/src/lib/: config.ts  contracts.ts  prover.ts  stellar.ts  stream.ts  wallet.ts
frontend/src/wasm/: streamzero_wasm.d.ts  streamzero_wasm.js  streamzero_wasm_bg.wasm  streamzero_wasm_bg.wasm.d.ts
noir_circuit/: Nargo.toml  Prover.toml
noir_circuit/src/: main.nr
proving/: .gitignore  README.md  package.json  test-wasm.mjs
proving/scripts/: verify_wasm.mjs
proving/streamzero-prover/: Cargo.toml
proving/streamzero-prover/artifacts/: demo_proof.json  verifying_key.json
proving/streamzero-prover/src/: lib.rs  main.rs
proving/streamzero-wasm/: Cargo.toml
proving/streamzero-wasm/src/: lib.rs
streamzero-contract/: README.md
streamzero-contract/contracts/mock-stablecoin/: Cargo.toml
streamzero-contract/contracts/mock-stablecoin/src/: lib.rs  test.rs
streamzero-contract/contracts/streamzero/: Cargo.toml
streamzero-contract/contracts/streamzero/src/: e2e_fixtures.rs  groth16.rs  lib.rs  test.rs
