[package]
name = "streamzero-prover"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone host tool (NOT part of the contract workspace). Generates a real
# Groth16/BN254 proof for the StreamZero statement and serializes the proof +
# verifying key into the exact byte layout the Soroban BN254 host functions
# expect, so the contract's verifier can be exercised end-to-end.

[dependencies]
ark-bn254 = "0.5"
ark-ff = "0.5"
ark-ec = "0.5"
ark-groth16 = "0.5"
ark-relations = "0.5"
ark-r1cs-std = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["sponge", "crh", "r1cs"] }
ark-serialize = "0.5"
ark-std = "0.5"
ark-snark = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
